Updated margins to fix cramped up look and fixed responsive design

--- a/portfolio/css/portfolio.css
+++ b/portfolio/css/portfolio.css
@@ -155,6 +155,10 @@ body {
   padding: 15px;
 }
 
+#about h1 {
+  margin-top: 25px;
+}
+
 #about h1, #about h3 {
   font-family: 'Alegreya Sans', sans-serif;
   text-transform: uppercase;
