--- a/portfolio/scss/mediaQueries.scss
+++ b/portfolio/scss/mediaQueries.scss
@@ -63,6 +63,10 @@
         }
     }
 
+    .about-right {
+        min-width: 100%;
+    }
+
     .about-right img {
         min-height: 300px;
     }
